--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
     <string name="app_name">Klukva</string>
+
+    <string name="name">KLUKVA</string>
+    <string name="name_of_language">EN</string>
+
+    <string name="user_name">Name</string>
+    <string name="user_login">Login</string>
+    <string name="user_password">Password</string>
+
+    <string name="user_name_hint">Enter a name</string>
+    <string name="user_login_hint">Enter a phone number</string>
+    <string name="user_password_hint">Enter a password</string>
+
+    <string name="license">By registering, you agree to the Privacy Policy and Terms of Use</string>
+    <string name="ok">OK</string>
+    <string name="registration_already">Already registered? Enter</string>
 </resources>
