--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -18,4 +18,9 @@
 
     <string name="forgot_password">Забыл(а) пароль</string>
     <string name="dont_have_an_account_yet_register">Еще нет аккаунта? Зарегистрироваться</string>
+
+    <string name="data">Дата</string>
+    <string name="time">Время</string>
+    <string name="duration">Длительность</string>
+    <string name="find_options">Найти варианты</string>
 </resources>
