--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,12 @@
 
     <string name="forgot_password">Forgot password</string>
     <string name="dont_have_an_account_yet_register">Don\'t have an account yet? Register</string>
+
+    <string name="data">Data</string>
+    <string name="time">Time</string>
+    <string name="duration">Duration</string>
+    <string name="find_options">Find options</string>
+
+    <string name="plus" translatable="false">+</string>
+    <string name="minus" translatable="false">-</string>
 </resources>
