--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,21 @@
 
     <string name="plus" translatable="false">+</string>
     <string name="minus" translatable="false">-</string>
+
+    <string name="Menu">Menu</string>
+    <string name="Poke">Poke</string>
+    <string name="Soups">Soups</string>
+    <string name="Main_Dishes">Main dishes</string>
+    <string name="Salads">Salads</string>
+    <string name="Snacks">Snacks</string>
+    <string name="Wok">Wok</string>
+    <string name="Sauces">Sauces</string>
+    <string name="Desserts">Desserts</string>
+    <string name="Drinks">Drinks</string>
+
+    <string name="All">All</string>
+    <string name="Positive">Positive</string>
+    <string name="Negative">Negative</string>
+    <string name="Average_Rating">Average rating</string>
+    <string name="Number_Of_Reviews">Number of reviews</string>
 </resources>
